# access_token

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: token.py
app/db/: __init__.py  models.py
